--- a/Model.ipynb
+++ b/Model.ipynb
@@ -229,6 +229,270 @@
     "\n",
     "$C_{t+1} = C_t + PC_{t,t+1}$\n",
     "\n",
+    "$PC_{t,t+1} = Cm_{t,t+1} + Con_{t,t+1} + 1/12*Csf$\n",
+    "\n",
+    "$Cm_{t,t+1} = Cmga_{t+1}$ - costs of marketing from $t$ to $t+1$ is equal to costs of marketing spent on google ads at the time $t+1$\n",
+    "\n",
+    "$Con_{t,t+1}$ - ongoing costs which cover rent and other expenditures.\n",
+    "\n",
+    "## Users\n",
+    "\n",
+    "$U_{n(t+1)} = (U_{nm (t+1)} + U_{nwm(t+1)})*Me$ - where,\n",
+    "\n",
+    "$U_{nwm(t+1)}$ - new users from word of mouth marketing\n",
+    "\n",
+    "$Me$ ~ $N(\\mu,\\sigma^2)$ - Marketing efficency parameter, where $\\mu=1$ and $\\sigma^2=0.1$\n",
+    "\n",
+    "**Users from marketing:**\n",
+    "\n",
+    "$U_{nm (t+1)} = Nc_{t+1}*cvr$ - new users from marketing investment at the moment $t+1$ are equal to number of clicks times conversion rate.\n",
+    "\n",
+    "$cvr$ ~ $N(\\mu,\\sigma^2)$ where $\\mu=$ and $\\sigma^2=$\n",
+    "\n",
+    "$Nc_{t+1} =$ $Cmga_{t+1} \\over Cpc$ - number of clicks depends on total google ads investment at time $t+1$ over average cost per click\n",
+    "\n",
+    "$Cpc$ ~ $N(\\mu,\\sigma^2)$ where $\\mu=$ and $\\sigma^2=$\n",
+    "\n",
+    "**Users from word of mouth:**\n",
+    "\n",
+    "$U_{nwm(t+1)} = U_{c(t)}*Rr$ - new users from word of mouth marketing depends on current amount of users times Referal rate.\n",
+    "\n",
+    "$Rr$ ~ $N(\\mu,\\sigma^2)$ where $\\mu=0.05$ and $\\sigma^2=0.1$\n",
+    "\n",
+    "In other words:\n",
+    "\n",
+    "$U_{n(t+1)} =($ $Cmga_{t+1} \\over Cpc$ $*cvr$  $+ U_{c(t)}*Rr)*Me$  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Total revenue\n",
+    "\n",
+    "$R_{t+1} : f(R_{add (t)},R_{pr (t)},C_{(t)}) + \\mu(N)$\n",
+    "\n",
+    "$R_{t+1}$ - total revenue\n",
+    "\n",
+    "$R_{add (t)}$ - revenue from adds\n",
+    "\n",
+    "$R_{pr (t)}$ - revenue from premium accounts\n",
+    "\n",
+    "$C_{(t)}$ - Costs\n",
+    "\n",
+    "$\\mu(N)$ - model of uncertainty\n",
+    "\n",
+    "To determine target function we will use following mathematic model:\n",
+    "\n",
+    "$x_{t+1} = x_t + \\delta x_{t,t+1}$\n",
+    "\n",
+    "$\\delta x_{t,t+1} = Px_{t,t+1} - Lx_{t,t+1}$ - profit(income) minus loss\n",
+    "\n",
+    "$R_{t+1} = R_t + PR_{t,t+1} - LR_{t,t+1}$, where \n",
+    "\n",
+    "$PR_{t,t+1} = R_{add (t,t+1)} + R_{pr (t,t+1)}$ - total revenue income from moment $t$ to moment $t+1$\n",
+    "\n",
+    "$LR_{t,t+1} = C_{(t+1)}$ - total revenue loss from moment $t$ to moment $t+1$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Revenue from premium accounts\n",
+    "\n",
+    "$R_{pr (t+1)} = R_{pr (t)} + PR_{pr (t,t+1)}$, where\n",
+    "\n",
+    "$R_{pr (t+1)}$ - revenue from premium accounts at moment $t+1$\n",
+    "\n",
+    "$PR_{pr (t,t+1)}$ - revenue income from moment $t$ to $t+1$\n",
+    "\n",
+    "$PR_{pr (t,t+1)} = Pr_p * P_p * U_{c (t+1)} $ , where:\n",
+    "\n",
+    "$Pr_p$ - price of premium per month [USD]\n",
+    "\n",
+    "$P_p = N(\\mu,\\sigma^2)$ - percent of premium users [%] is defined by some normal distribution with $\\sigma^2=$ and $\\mu=$\n",
+    "\n",
+    "$U_{c (t+1)}$ - total users count in a given month [-]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### User count\n",
+    "\n",
+    "$U_{c (t+1)} = U_{c (t)} + PU_{c (t,t+1)} - LU_{c (t,t+1)}$ , where:\n",
+    "\n",
+    "$U_{c (t+1)}$ - users count at moment $t+1$\n",
+    "\n",
+    "$PU_{c (t,t+1)} = U_{n (t+1)}$ - user income from moment $t$ to $t+1$\n",
+    "\n",
+    "$LU_{c (t,t+1)} = U_{c (t)} * a_u$ - user loss from moment $t$ to $t+1$\n",
+    "\n",
+    "In other words:\n",
+    "\n",
+    "$U_{c (t+1)} = U_{c (t)} + U_{n (t+1)} - U_{c (t)} * a_u$ , where:\n",
+    "\n",
+    "$U_{c (t+1)}$ - count of users in given month\n",
+    "\n",
+    "$U_{c (t)}$ - count of users in previous month\n",
+    "\n",
+    "$a_u = N(\\mu,\\sigma^2)$ - user attrition, which is defined by some normal distribution with $\\sigma^2=$ and $\\mu=$\n",
+    "\n",
+    "$U_{n (t+1)}$ - new users in given month (*it depends on marketing*)\n",
+    "\n",
+    "In other words,\n",
+    "\n",
+    "$R_{pr (t+1)} = R_{pr (t)} + Pr_p * P_p * (U_{c (t)} + U_{n (t+1)} - U_{c (t)} * a_u)$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Revenue from adds\n",
+    "\n",
+    "\n",
+    "Total generic revenue from adds can be represented with following euation:\n",
+    "\n",
+    "$R_{add (t+1)} = R_{add (t)} + PR_{add (t,t+1)}$, where:\n",
+    "\n",
+    "$R_{add (t+1)}$ - revenue from advertisements at moment $t+1$\n",
+    "\n",
+    "$PR_{add (t,t+1)}$ - revenue income from moment $t$ to $t+1$. Equations for specific advertisements income models are described below.\n",
+    "\n",
+    "Revenue from advertisements can come from three pricing models. Each of them is caltulated using different equations.\n",
+    "\n",
+    "1. $R_{CPM}$ - revenue from add views\n",
+    "2. $R_{CPC}$ - revenue from clicking on adds\n",
+    "3. $R_{CPA}$ - revenue from actions taken, e.g. purchasing an app from add, buying product. CPC excludes using CPA\n",
+    "\n",
+    "\n",
+    "\n",
+    "***\n",
+    "#### 1. CPM pricing model\n",
+    "\n",
+    "$PR_{add (t,t+1)} = Cs_{t+1} / 1000 * min_{s} * add_{m} * Fr * CPM$, where:\n",
+    "\n",
+    "\n",
+    "$Cs_{t+1}$ - count of sessions per time frame  [-]\n",
+    "\n",
+    "$min_{s }$ - avg. minutes used spend per session [min]\n",
+    "\n",
+    "$min_{s} ~ N(\\mu,\\sigma^2)$ where $\\mu=$ and $\\sigma^2=$\n",
+    "\n",
+    "$add_{m }$ - adds impressions per minute for given application [-/min]\n",
+    "\n",
+    "$Fr$ - fill rate [%] - how many add requests receive add from our add source\n",
+    "\n",
+    "$Fr$ ~ $N(\\mu,\\sigma^2)$ where $\\mu=$ and $\\sigma^2=$\n",
+    "\n",
+    "$CPM$ - cost (revenue for us) per 1k impressions [USD/1k] // iOS ~5 USD; Android ~2 USD\n",
+    "\n",
+    "$CPM$ - fixed rate we determine this parameter based on period of the year: summer, autumn, winter, spring.\n",
+    "\n",
+    "$Cs_{t+1} = Cs_{t} + PCs_{t,t+1} - LCs_{t,t+1}$\n",
+    "\n",
+    "$Cs_{t} = (1 - P_p) *U_{c(t)} * Nsa $ - count of sessions is equal to amount of users in a given month minus those who bought premium times average number of session per user.\n",
+    "\n",
+    "$Nsa - N(\\mu, \\sigma^2)$ - average number of users in a given month with $\\mu=$ and $\\sigma^2=$\n",
+    "\n",
+    "$PCs_{t,t+1} = PU_{c (t,t+1)} * Nsa $ - increase in amount of sessions depends on increase of number of users which is covered in **User count** model\n",
+    "\n",
+    "$LCs_{t,t+1} = LU_{c (t,t+1)} * Nsa$ - loss in amount of sessions depends on loss of number of users which is covered in **User count** model\n",
+    "\n",
+    "$PU_{c (t,t+1)} = U_{n (t+1)}$ - user income from moment $t$ to $t+1$\n",
+    "\n",
+    "$LU_{c (t,t+1)} = U_{c (t)} * a_u$ - user loss from moment $t$ to $t+1$\n",
+    "\n",
+    "$a_u$ - user attrition from **User count**\n",
+    "\n",
+    "$U_{c (t)}$ - current users in given month\n",
+    "\n",
+    "$U_{n (t+1)}$ - new users in given month (*it depends on marketing*)\n",
+    "\n",
+    "$Cs_{t+1} = (1 - P_p)*Nsa*(U_{c(t)} + U_{n (t+1)} - U_{c (t)} * a_u)$\n",
+    "\n",
+    "$Cs_{t+1} = (1 - P_p)*Nsa*(U_{c(t)} + U_{n (t+1)} - U_{c (t)} * a_u)$\n",
+    "\n",
+    "In other words,\n",
+    "\n",
+    "$PR_{add (t,t+1)} = (1 - P_p)*Nsa*(U_{c(t)} + U_{n (t+1)} - U_{c (t)} * a_u) * 0,001 * min_{s} * add_{m} * Fr * CPM$\n",
+    "\n",
+    "$R_{add (t+1)} = R_{add (t)} + (1 - P_p)*Nsa*(U_{c(t)} + U_{n (t+1)} - U_{c (t)} * a_u) * 0,001 * min_{s} * add_{m} * Fr * CPM$\n",
+    "\n",
+    "## Total revenue income\n",
+    "\n",
+    "$PR_{t,t+1} =  (1 - P_p)*Nsa*(U_{c(t)} + U_{n (t+1)} - U_{c (t)} * a_u) * 0,001 * min_{s} * add_{m} * Fr * CPM + Pr_p * P_p * (U_{c (t)} + U_{n (t+1)} - U_{c (t)} * a_u)$ - total revenue income from moment $t$ to moment $t+1$\n",
+    "\n",
+    "$PR_{t,t+1} =  (U_{c(t)} + U_{n (t+1)} - U_{c (t)} * a_u) * ((1 - P_p)*Nsa* 0,001 * min_{s} * add_{m} * Fr * CPM + Pr_p * P_p)$\n",
+    "\n",
+    "$R_{t+1} = R_t + PR_{t,t+1} - LR_{t,t+1}$, where \n",
+    "\n",
+    "$PR_{t,t+1} = (U_{c(t)} + U_{n (t+1)} - U_{c (t)} * a_u) * ((1 - P_p)*Nsa* 0,001 * min_{s} * add_{m} * Fr * CPM + Pr_p * P_p)$ - total revenue income from moment $t$ to moment $t+1$ -- **important part**\n",
+    "\n",
+    "$LR_{t,t+1} = C_{(t+1)}$ - total revenue loss from moment $t$ to moment $t+1$\n",
+    "\n",
+    "\n",
+    "***\n",
+    "#### 2. CPC pricing model\n",
+    "\n",
+    "$PR_{ad (t,t+1)} = C_{s (t+1)} * CTR_{(t+1)} * CPC_{(t+1)}$, where:\n",
+    "\n",
+    "$C_{s (t+1)}$ - count of sessions per time frame in time $t+1$ [k]\n",
+    "\n",
+    "$CTR_{(t+1)}$ - click through rate in timeframe $t+1$ [%] // avg. 0,46 %\n",
+    "\n",
+    "$CPC_{(t+1)}$ - cost per click in timeframe $t+1$ [USD] //avg. 0,6 USD\n",
+    "\n",
+    "***\n",
+    "#### 3. CPA pricing model\n",
+    "\n",
+    "$PR_{ad (t,t+1)} = C_{s (t+1)} * CPA_{(t+1)} * CTR_{(t+1)} * CVR_{(t+1)}$\n",
+    "\n",
+    "$R_{CPA} = CPA * C_s * CTR * CVR$\n",
+    "\n",
+    "$C_{s (t+1)}$ - count of sessions per time frame in time $t+1$ [k]\n",
+    "\n",
+    "$CPA_{(t+1)}$ - cost per action in timeframe $t+1$ [USD] // Cost varies 4 USD - 75 USD\n",
+    "\n",
+    "$CTR_{(t+1)}$ - click through rate in timeframe $t+1$ [%] // avg. 0,46 %\n",
+    "\n",
+    "$CVR_{(t+1)}$ - conversion ratein timeframe $t+1$ [%] - how many clicks resulted in action"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Costs calculation\n",
+    "\n",
+    "utrzymanie aplikacji\n",
+    "\n",
+    "    support\n",
+    "    \n",
+    "    infra\n",
+    "    \n",
+    "marketing\n",
+    "\n",
+    "    inicjalny\n",
+    "    \n",
+    "    ongoing\n",
+    "    \n",
+    "\n",
+    "wytworzenie produktu\n",
+    "\n",
+    "oplata do sklepu\n",
+    "\n",
+    "$LR_{t,t+1} = C_{(t+1)}$ - total revenue loss from moment $t$ to moment $t+1$\n",
+    "\n",
+    "$C_{0} = Cim + Cid$ - initial cost invested in product. Consists from initial investment into development and initial investment into marketing.\n",
+    "\n",
+    "$C_{1} = C_0 + PC_{0,1}$\n",
+    "\n",
+    "$C_{t+1} = C_t + PC_{t,t+1}$\n",
+    "\n",
     "$PC_{t,t+1} = Cm_{t,t+1} + Co_{t,t+1} + 1/12*Csf$\n",
     "\n"
    ]
