--- a/parameters.ipynb
+++ b/parameters.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dict_params = {\n",
+    "dict_params_neutral = {\n",
     "    'adds': {\n",
     "        'cpm': {\n",
     "            'mean': 3.2,\n",
@@ -56,17 +56,31 @@
     "}\n",
     "dict_dates = {\n",
     "    'startYear': 2019,\n",
-    "    'starthMonth': 6,\n",
+    "    'startMonth': 6,\n",
     "    'endYear': 2022,\n",
     "    'endMonth': 6\n",
     "}\n",
     "dict_money = {\n",
     "    'premiumPrice': 10,\n",
     "    'initialCostMarketing': 5000,\n",
-    "    'initialCostDevelopment': 0, #ongoing maintenance should be 20% of dev costs divided by 12\n",
-    "    'ongoingCostMarketing': 2000\n",
-    "}"
+    "    'initialCostDevelopment': 2000,\n",
+    "    'ongoingCostMarketing': 2000,\n",
+    "    'ongoingCostMaintenance': 200\n",
+    "}\n",
+    "\n",
+    "dict_params_pesimistic = {\n",
+    "    1: 1\n",
+    "}\n",
+    "#dict_params_neutral = {}\n",
+    "dict_params_optimistic = {}"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
